--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,21 @@
-autopep8==1.5.6
-flake8==3.9.0
-mypy==0.812
-pre-commit==2.11.1
+autopep8==1.5.7
+backports.entry-points-selectable==1.1.0
+cfgv==3.3.1
+distlib==0.3.3
+filelock==3.3.0
+flake8==3.9.2
+identify==2.3.0
+mccabe==0.6.1
+mypy==0.910
+mypy-extensions==0.4.3
+nodeenv==1.6.0
+platformdirs==2.4.0
+pre-commit==2.15.0
+pycodestyle==2.7.0
+pyflakes==2.3.1
+PyYAML==5.4.1
+six==1.16.0
+toml==0.10.2
+typed-ast==1.4.3
+typing-extensions==3.10.0.2
+virtualenv==20.8.1
